--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>The Blessed Ray for Ukraine</title>
 </head>
 <body>
@@ -69,6 +76,9 @@ for Ukraine</span>
     <section class="hero_section">
         <div class="carousel">
             <div class="slider">
+
+                <!-- Slide 1 -->
+
                 <div class="slide">
                     <div class="wrapper">
                         <div class="slide_content_wrapper">
@@ -80,25 +90,14 @@ a Long Lasting Impact on the Lives
 of Ukrainians</p>
                             </div>
                             <div class="btn_wrapper">
-                                <a href="#" class="btn">View Stories</a>
+                                <a href="#" class="btn">Make a contribution</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="slide">
-                    <div class="wrapper">
-                        <div class="slide_content_wrapper">
-                            <div class="slide_text">
-                                <h1 class="section_title">Make a Direct Impact on Lives 
-of Ukrainians Today</h1>
-                                <p class="section_description">View Some of the Lives We’ve Already Impacted</p>
-                            </div>
-                            <div class="btn_wrapper">
-                                <a href="#" class="btn">View Stories</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+                <!-- Slide 2 -->
+
                 <div class="slide">
                     <div class="wrapper">
                         <div class="slide_content_wrapper">
@@ -150,7 +149,7 @@ or civilian today?</p>
         <div class="wrapper">
             <div class="section_content_wrapper">
                 <div class="section_text">
-                    <h2 class="section_title">Accoounting</h2>
+                    <h2 class="section_title">Accounting</h2>
                     <p class="section_description">Transparency is a cornerstone of our charity. 
 Registered in the US as a 501C3, we gladly share our contributions to date 
 in order to offer peace of mind to those new to our organization.
