add mission page

--- a/mission.html
+++ b/mission.html
@@ -73,90 +73,56 @@ for Ukraine</span>
         </div>
     </header>
 
-    <section class="hero_section">
-        <div class="carousel">
-            <div class="slider">
-
-                <!-- Slide 1 -->
-                <div class="slide">
-                    <div class="wrapper">
-                        <div class="slide_content_wrapper">
-                            <div class="slide_text">
-                                <h1 class="section_title">You Don’t Have to Feel Helpless 
-About this Conflict</h1>
-                                <p class="section_description">Even a Small Contribution Can Make
-a Long Lasting Impact on the Lives 
-of Ukrainians</p>
-                            </div>
-                            <div class="btn_wrapper">
-                                <a href="#" class="btn">Make a Contribution</a>
-                            </div>
-                        </div>
+    <section class="mission_intro">
+        <div class="wrapper">
+            <div class="mission_intro_wrapper">
+                <div class="section_content_wrapper">
+                    <div class="section_text">
+                        <h2 class="section_title">Mission</h2>
+                        <p class="section_description">The mission of the Blessed Ray of Ukraine is to provide immediate and direct assistance to
+                            Ukrainians in need of aid. Our charity covers the gamut of this conflict: refugees, civilians
+                            residing in Ukraine, children, and the military. 
+                            </p>
                     </div>
-                </div>
-
-                <!-- Slide 2 -->
-
-                <div class="slide">
-                    <div class="wrapper">
-                        <div class="slide_content_wrapper">
-                            <div class="slide_text">
-                                <h1 class="section_title">Make a Direct Impact 
-on the Lives of Ukrainians Today</h1>
-                                <p class="section_description">View Some of the Lives We’ve Already Impacted</p>
-                            </div>
-                            <div class="btn_wrapper">
-                                <a href="#" class="btn">View Stories</a>
-                            </div>
-                        </div>
-                    </div>
+                </div>   
+                <div class="mission_img_wrapper">
+                    <img class="mission_img" src="assets/mission_img.png" alt="Collage of photos with soldiers, people, kids and refugees">
                 </div>
             </div>
         </div>
-    </section> 
-    <section class="mission">
-        <div class="wrapper">
-            <div class="section_content_wrapper">
-                <div class="section_text">
-                    <h2 class="section_title">Mission</h2>
-                    <p class="section_description">We provide direct support to Ukrainians in need based on your choice of contribution. Unlike
-                        a large organization which distributes funds behind the scenes, you will see the impact of
-                        your contribution directly. Check out the Stories section of our website to see examples of
-                        those we have already helped</p>
-                </div>
-            </div>   
-        </div>
     </section>
-    <section class="stories">
-        <div class="wrapper">
-            <div class="section_content_wrapper">
-                <div class="section_text">
-                    <h2 class="section_title">Stories</h2>
-                    <p class="section_description">Get to meet Ukrainians who have been directly impacted by 
-the Blessed Ray for Ukraine charity.</p>
-                    <p class="section_description">Do you want to impact the life of a Ukrainian refugee,  soldier, 
-or civilian today?</p>
-                </div>
-                <div class="btn_wrapper">
-                    <a href="#" class="btn">Donate Now</a>
+
+    <section class="mission_description">
+        <div class="mission_intro_wrapper">
+                <div class="section_content_wrapper">
+                    
+                        <div class="section_text">
+                            <p class="section_description">While we have been astounded with the charitable efforts of many global organizations since
+                                the outbreak of this war, it is often challenging to directly deliver aid to those in need,
+                                especially when time is of the essence. 
+                            </p>
+                        </div>
+                   
+                </div>   
+                <div class="mission_img_wrapper">
+                    <img class="mission_img" src="assets/mission_desc_img.png" alt="">
                 </div>
             </div>
-            <img src="assets/stories_img.png" alt="" class="image">
-        </div>
     </section>
-    <section class="accounting">
+
+    <section class="mission_goal">
         <div class="wrapper">
             <div class="section_content_wrapper">
+                <div class="section_icon"></div>
                 <div class="section_text">
-                    <h2 class="section_title">Accounting</h2>
-                    <p class="section_description">Transparency is a cornerstone of our charity. 
-Registered in the US as a 501C3, we gladly share our contributions to date 
-in order to offer peace of mind to those new to our organization.
-                        </p>
+                    <p class="section_description">The goal of the Blessed Ray of Ukraine is to fill this gap. In essence, we directly touch each
+                        life we impact, often immediately and now open this door to our donors.
+                    </p>
                 </div>
-            </div>   
-        </div>
+            </div>
+        </div>      
     </section>
+
     <footer class="footer">
         <div class="wrapper">
             <div class="footer_content_top">
