--- a/mission.html
+++ b/mission.html
@@ -53,7 +53,7 @@ for Ukraine</span>
                             <li class="main_menu_item"><a href="mission.html" class="menu_link">Mission</a></li>
                             <li class="main_menu_item"><a href="#" class="menu_link">Stories</a></li>
                             <li class="main_menu_item"><a href="#" class="menu_link">About</a></li>
-                            <li class="main_menu_item"><a href="#" class="menu_link">Contact</a></li>
+                            <li class="main_menu_item"><a href="contacts.html" class="menu_link">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -65,7 +65,7 @@ for Ukraine</span>
                             <li class="main_menu_item"><a href="mission.html" class="menu_link">Mission</a></li>
                             <li class="main_menu_item"><a href="#" class="menu_link">Stories</a></li>
                             <li class="main_menu_item"><a href="#" class="menu_link">About</a></li>
-                            <li class="main_menu_item"><a href="#" class="menu_link">Contact</a></li>
+                            <li class="main_menu_item"><a href="contacts.html" class="menu_link">Contact</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -148,7 +148,7 @@ for Ukraine</span>
                                     <li class="main_menu_item"><a href="mission.html" class="menu_link">Mission</a></li>
                                     <li class="main_menu_item"><a href="#" class="menu_link">Stories</a></li>
                                     <li class="main_menu_item"><a href="#" class="menu_link">About</a></li>
-                                    <li class="main_menu_item"><a href="#" class="menu_link">Contact</a></li>
+                                    <li class="main_menu_item"><a href="contacts.html" class="menu_link">Contact</a></li>
                                 </ul>
                             </div>
                             <div class="menu_right">
