add donation page

--- a/mission.html
+++ b/mission.html
@@ -135,7 +135,7 @@ for Ukraine</span>
                         </a>
                     </div>
                     <div class="btn_wrapper">
-                        <a href="#" class="btn">Contact Us</a>
+                        <a href="contacts.html" class="btn">Contact Us</a>
                     </div>
                 </div>
                 <div class="footer_content_right">
