--- a/donate.html
+++ b/donate.html
@@ -25,9 +25,7 @@
                     <li class="social_link_item"><a href="#" class="social_link"><img src="assets/facebook.svg" alt="" class="social_icon"></a></li>
                     <li class="social_link_item"><a href="#" class="social_link"><img src="assets/twitter.svg" alt="" class="social_icon"></a></li>
                     <li class="social_link_item"><a href="#" class="social_link"><img src="assets/youtube.svg" alt="" class="social_icon"></a></li>
-                    <li class="social_link_item"><a href="#" class="social_link"><img src="assets/whatsapp.svg" alt="" class="social_icon"></a></li>
                     <li class="social_link_item"><a href="#" class="social_link"><img src="assets/telegram.svg" alt="" class="social_icon"></a></li>
-                    <li class="social_link_item"><a href="#" class="social_link"><img src="assets/skype.svg" alt="" class="social_icon"></a></li>
                 </ul>
             </div>
         </div>
@@ -51,7 +49,7 @@ for Ukraine</span>
                         <ul class="main_menu_list">
                             <li class="main_menu_item"><a href="index.html" class="menu_link">Home</a></li>
                             <li class="main_menu_item"><a href="mission.html" class="menu_link">Mission</a></li>
-                            <li class="main_menu_item"><a href="#" class="menu_link">Stories</a></li>
+                            <li class="main_menu_item"><a href="donate.html" class="menu_link">Donate</a></li>
                             <li class="main_menu_item"><a href="#" class="menu_link">About</a></li>
                             <li class="main_menu_item"><a href="contacts.html" class="menu_link">Contact</a></li>
                         </ul>
@@ -63,7 +61,7 @@ for Ukraine</span>
                         <ul class="main_menu_list">
                             <li class="main_menu_item"><a href="index.html" class="menu_link">Home</a></li>
                             <li class="main_menu_item"><a href="mission.html" class="menu_link">Mission</a></li>
-                            <li class="main_menu_item"><a href="#" class="menu_link">Stories</a></li>
+                            <li class="main_menu_item"><a href="donate.html" class="menu_link">Donate</a></li>
                             <li class="main_menu_item"><a href="#" class="menu_link">About</a></li>
                             <li class="main_menu_item"><a href="contacts.html" class="menu_link">Contact</a></li>
                         </ul>
@@ -150,7 +148,7 @@ for Ukraine</span>
                                 <ul class="main_menu_list">
                                     <li class="main_menu_item"><a href="index.html" class="menu_link">Home</a></li>
                                     <li class="main_menu_item"><a href="mission.html" class="menu_link">Mission</a></li>
-                                    <li class="main_menu_item"><a href="#" class="menu_link">Stories</a></li>
+                                    <li class="main_menu_item"><a href="donate.html" class="menu_link">Donate</a></li>
                                     <li class="main_menu_item"><a href="#" class="menu_link">About</a></li>
                                     <li class="main_menu_item"><a href="contacts.html" class="menu_link">Contact</a></li>
                                 </ul>
@@ -188,12 +186,6 @@ for Ukraine</span>
                             <svg class="youtube_social_icon" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20.4138 3.42188C20.2197 2.25354 19.2947 1.40271 18.2213 1.13708C16.615 0.765625 13.6422 0.5 10.4258 0.5C7.21126 0.5 4.19087 0.765625 2.58265 1.13708C1.51115 1.40271 0.584285 2.19959 0.390158 3.42188C0.194128 4.75 0 6.60938 0 9C0 11.3906 0.194127 13.25 0.437738 14.5781C0.633768 15.7465 1.55873 16.5973 2.63023 16.8629C4.33551 17.2344 7.25884 17.5 10.4753 17.5C13.6917 17.5 16.615 17.2344 18.3203 16.8629C19.3918 16.5973 20.3167 15.8004 20.5128 14.5781C20.7069 13.25 20.9505 11.3367 21 9C20.901 6.60938 20.6574 4.75 20.4138 3.42188ZM7.79554 12.7188V5.28125L13.7393 9L7.79554 12.7188Z" fill="white"/>
                             </svg>
-                            </a></li>
-                        <li class="social_link_item">
-                            <a href="#" class="social_link">
-                                <svg class="wa_social_icon" width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M10 0.5C4.48614 0.5 6.45317e-05 5.21039 6.45317e-05 11C6.45317e-05 12.8078 0.444846 14.5855 1.28832 16.1541L0.0161514 20.9202C-0.0255876 21.0768 0.0148471 21.2448 0.122673 21.3612C0.205716 21.4512 0.318759 21.5 0.434846 21.5C0.469628 21.5 0.504845 21.4954 0.539193 21.4868L5.27657 20.2546C6.72309 21.07 8.35221 21.5 10 21.5C15.5139 21.5 20 16.7896 20 11C20 5.21039 15.5139 0.5 10 0.5ZM15.0305 14.7051C14.8165 15.3269 13.7905 15.8944 13.2974 15.9706C12.8548 16.0386 12.2948 16.0678 11.68 15.8652C11.3074 15.7419 10.8292 15.5785 10.2166 15.3041C7.64134 14.1509 5.95961 11.4625 5.83092 11.2849C5.70265 11.1073 4.78266 9.8418 4.78266 8.53204C4.78266 7.22228 5.4457 6.57813 5.68135 6.31152C5.917 6.04491 6.19483 5.97826 6.36613 5.97826C6.53743 5.97826 6.7083 5.98054 6.8583 5.98785C7.01613 5.99607 7.22787 5.9253 7.43613 6.44483C7.65004 6.97804 8.16352 8.2878 8.22699 8.42157C8.29134 8.55487 8.33395 8.71054 8.24873 8.88813C8.16352 9.06572 8.12091 9.17665 7.99221 9.33233C7.86352 9.488 7.72265 9.67928 7.607 9.79889C7.4783 9.93174 7.34482 10.0755 7.49439 10.3422C7.64395 10.6088 8.15917 11.4803 8.92264 12.186C9.90308 13.0927 10.7305 13.3739 10.987 13.5072C11.2435 13.6405 11.3935 13.6182 11.5431 13.4406C11.6926 13.2625 12.1848 12.6631 12.3557 12.397C12.5265 12.1308 12.6978 12.1746 12.9335 12.2637C13.1692 12.3522 14.4313 12.9959 14.6878 13.1292C14.9444 13.2625 15.1157 13.3292 15.18 13.4401C15.2444 13.5506 15.2444 14.0838 15.0305 14.7051Z" fill="white"/>
-                                </svg>
                             </a>
                         </li>
                         <li class="social_link_item">
@@ -203,13 +195,6 @@ for Ukraine</span>
                                     <path d="M7.44604 11.8041L8.7511 15.4163C8.7511 15.4163 8.91427 15.7543 9.08898 15.7543C9.2637 15.7543 11.8624 13.0508 11.8624 13.0508L14.7521 7.46925L7.49261 10.8716L7.44604 11.8041Z" fill="#C8DAEA"/>
                                     <path d="M9.1763 12.7305L8.92577 15.393C8.92577 15.393 8.82091 16.2089 9.63656 15.393C10.4522 14.5772 11.2329 13.9481 11.2329 13.9481" fill="#3067A0"/>
                                     <path d="M7.46944 11.9329L4.7849 11.0582C4.7849 11.0582 4.46406 10.9281 4.56737 10.6329C4.58864 10.572 4.63154 10.5202 4.75987 10.4312C5.35469 10.0166 15.7696 6.27324 15.7696 6.27324C15.7696 6.27324 16.0636 6.17415 16.2371 6.24006C16.28 6.25334 16.3186 6.27778 16.3489 6.31088C16.3793 6.34398 16.4003 6.38454 16.4099 6.42843C16.4286 6.50595 16.4364 6.58571 16.4331 6.66539C16.4323 6.73432 16.424 6.79822 16.4177 6.89841C16.3542 7.92186 14.456 15.5603 14.456 15.5603C14.456 15.5603 14.3424 16.0072 13.9355 16.0225C13.8355 16.0258 13.7359 16.0088 13.6426 15.9727C13.5493 15.9366 13.4642 15.8821 13.3924 15.8124C12.5939 15.1256 9.83398 13.2708 9.22412 12.8629C9.21037 12.8535 9.19878 12.8413 9.19015 12.8271C9.18151 12.8128 9.17603 12.7969 9.17407 12.7804C9.16555 12.7374 9.2123 12.6841 9.2123 12.6841C9.2123 12.6841 14.018 8.41246 14.1459 7.96403C14.1558 7.92929 14.1184 7.91215 14.0681 7.92736C13.749 8.04479 8.21579 11.539 7.60511 11.9247C7.56115 11.938 7.51469 11.9408 7.46944 11.9329Z" fill="#338EEE"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social_link_item">
-                            <a href="#" class="social_link">
-                                <svg class="sk_social_icon" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M5.99812 0C2.69227 0 0 2.52969 0 5.6375C0 6.59063 0.260859 7.52031 0.748125 8.35C0.633281 8.925 0.5775 9.51719 0.5775 10.1C0.5775 15.3 5.07117 19.525 10.605 19.525C11.1727 19.525 11.7403 19.4891 12.2981 19.4C13.1283 19.7953 14.0618 20 15.0019 20C18.3077 20 21 17.4703 21 14.3625C21 13.5281 20.8064 12.7312 20.4356 11.9875C20.5702 11.3734 20.6456 10.7391 20.6456 10.1C20.6456 4.90156 16.1388 0.675 10.605 0.675C10.0849 0.675 9.55992 0.7125 9.04313 0.7875C8.12109 0.273438 7.07602 0 5.99812 0ZM10.5394 3.75C11.3991 3.75 12.1521 3.83906 12.7837 4.025C13.417 4.20938 13.9535 4.45469 14.3719 4.7625C14.7952 5.07344 15.1184 5.40469 15.3169 5.75C15.517 6.09844 15.6187 6.45313 15.6187 6.7875C15.6187 7.11094 15.4744 7.39375 15.2119 7.65C14.9494 7.90625 14.6196 8.0375 14.2275 8.0375C13.8715 8.0375 13.5942 7.95938 13.4006 7.8C13.2202 7.65 13.0298 7.42188 12.8231 7.0875C12.5836 6.65938 12.303 6.31094 11.97 6.075C11.6468 5.84531 11.0972 5.7375 10.3556 5.7375C9.66656 5.7375 9.10383 5.85625 8.68875 6.1125C8.2868 6.35938 8.09812 6.65156 8.09812 6.9875C8.09812 7.19375 8.16539 7.36406 8.295 7.5125C8.43281 7.66875 8.61492 7.79844 8.85938 7.9125C9.11203 8.03125 9.37289 8.13281 9.63375 8.2C9.90117 8.26875 10.3573 8.37813 10.9725 8.5125C11.7502 8.67031 12.4655 8.83594 13.0987 9.025C13.7386 9.21875 14.2882 9.46094 14.7394 9.7375C15.1987 10.0188 15.5695 10.3797 15.8287 10.8125C16.088 11.2453 16.2094 11.7766 16.2094 12.4C16.2077 13.1438 15.9879 13.8188 15.54 14.4125C15.0938 15.0047 14.4359 15.4812 13.5844 15.8125C12.7411 16.1406 11.7288 16.3 10.5787 16.3C9.19734 16.3 8.04234 16.0766 7.14 15.625C6.49359 15.2984 5.95383 14.8469 5.55187 14.3C5.14172 13.7469 4.935 13.2047 4.935 12.675C4.935 12.3453 5.07609 12.0609 5.34187 11.825C5.60602 11.5938 5.93742 11.475 6.33938 11.475C6.66914 11.475 6.96117 11.5656 7.1925 11.75C7.41562 11.9266 7.6043 12.1891 7.75687 12.525C7.9275 12.8922 8.10961 13.1922 8.30812 13.4375C8.49516 13.6703 8.76258 13.8719 9.10875 14.025C9.45656 14.1813 9.93398 14.2625 10.5131 14.2625C11.3088 14.2625 11.9536 14.1016 12.4425 13.7875C12.9216 13.4812 13.1644 13.1141 13.1644 12.6625C13.1644 12.3063 13.0331 12.0188 12.7837 11.8C12.5212 11.5703 12.1767 11.3969 11.76 11.275C11.322 11.1484 10.7346 11.0078 10.0012 10.8625C9.00375 10.6609 8.15555 10.4187 7.48125 10.15C6.79055 9.87344 6.23438 9.48906 5.8275 9.0125C5.41406 8.52656 5.1975 7.92813 5.1975 7.2125C5.1975 6.52969 5.41898 5.90469 5.85375 5.375C6.28195 4.85 6.90867 4.44219 7.7175 4.1625C8.51484 3.88438 9.46641 3.75 10.5394 3.75Z" fill="white"/>
                                 </svg>
                             </a>
                         </li>
