--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ for Ukraine</span>
             <div class="slider">
 
                 <!-- Slide 1 -->
+
                 <div class="slide">
                     <div class="wrapper">
                         <div class="slide_content_wrapper">
@@ -106,6 +107,44 @@ on the Lives of Ukrainians Today</h1>
                             </div>
                             <div class="btn_wrapper">
                                 <a href="#" class="btn">View Stories</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Slide 3 -->
+
+                <div class="slide">
+                    <div class="wrapper">
+                        <div class="slide_imgs_wrapper">
+                            <ul class="imgs_list">
+                                <li class="imgs_item">
+                                    <img class="imgs_media" src="assets/children_thumb.png" alt="">
+                                    <p class="imgs_label">Children</p>
+                                </li>
+                                <li class="imgs_item">
+                                    <div class="imgs_media_wrapper"><img class="imgs_media" src="assets/refugees_thumb.png" alt=""></div>
+                                    <p class="imgs_label">Refugees</p>
+                                </li>
+                                <li class="imgs_item">
+                                    <div class="imgs_media_wrapper"><img class="imgs_media" src="assets/medical_assistance_thumb.png" alt=""></div>
+                                    <p class="imgs_label">Medical Assistance</p>
+                                </li>
+                                <li class="imgs_item">
+                                    <div class="imgs_media_wrapper"><img class="imgs_media" src="assets/food_thumb.png" alt=""></div>
+                                    <p class="imgs_label">Food</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="slide_content_wrapper">
+                            <div class="slide_text">
+                                <h1 class="section_title">Make a Direct Impact on Lives
+of Ukrainians Today</h1>
+                                <p class="section_description">Our Ray of Blessing Touch All Aspects of the Crisis, Allowing You to
+Choose How you Wish to Make an Impact</p>
+                            </div>
+                            <div class="btn_wrapper">
+                                <a href="donate.html" class="btn">Make a Contribution</a>
                             </div>
                         </div>
                     </div>
